Fixed the gulpfile by repointing bower assets path to correct folder.  Also added required gems to Gemfile so can be installed with bundler

--- a/_includes/themes/grayscale/contact_form.html
+++ b/_includes/themes/grayscale/contact_form.html
@@ -1,7 +1,7 @@
 <form role="form"
   id="simpleform"
   data-toggle="validator"
-  action="http://getsimpleform.com/messages?form_api_token=41dc591ad6a976440d791b04906034c7"
+  action="https://getsimpleform.com/messages?form_api_token=41dc591ad6a976440d791b04906034c7"
   method="post"
   novalidate>
   <div class="row">
