--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -276,7 +276,7 @@ btn-circle-dark:hover,
 }
 
 @-webkit-keyframes pulse {
-    0 {
+    0% {
         -webkit-transform: scale(1);
         transform: scale(1);
     }
@@ -293,7 +293,7 @@ btn-circle-dark:hover,
 }
 
 @-moz-keyframes pulse {
-    0 {
+    0% {
         -moz-transform: scale(1);
         transform: scale(1);
     }
