--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -47,7 +47,7 @@
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{% unless page.description == null %}{{ page.description }}{% endunless %}" />
 
-    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
 
     <!-- inject:css -->
     <link rel="stylesheet" href="/assets/css/all.css">
@@ -183,7 +183,7 @@
 
     <!-- Custom Theme JavaScript -->
     <!-- inject:js -->
-    <script src="/assets/js/all.min-739170e5.js"></script>
+    <script src="/assets/js/all.min-d9f33ba1.js"></script>
     <!-- endinject -->
 
     <!-- Include dataLayer -->
