--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -39,6 +39,10 @@ img {
   width:100%;
 }
 
+img.emoji {
+  width: auto;
+}
+
 .has-error {
     .form-control {
         border-color: darken($errortext,8);
