--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -50,7 +50,7 @@
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="/assets/css/all.min-10c3d8e8.css">
+    <link rel="stylesheet" href="/assets/css/all.css">
     <!-- endinject -->
 
     <!-- Progress meter - Remove if video load times are acceptable -->
@@ -69,7 +69,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="{% if page.url == '/index.html' %}#page-top{% else %}/{% endif %}">
+                <a class="navbar-brand" href="{% if page.url == '/' %}#page-top{% else %}/{% endif %}">
                     <i class="fa fa-play-circle"></i>  <span class="light">John</span> Moxon
                 </a>
             </div>
@@ -123,7 +123,7 @@
     <section id="content" class="container content-section">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                {% unless page.url == '/index.html' %}
+                {% unless page.url == '/' %}
                 {% include themes/grayscale/components/breadcrumb %}
                 {% endunless %}
 
