added auto_w - auto-width-image class

--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -161,7 +161,7 @@
                     </li>
                 </ul>
 
-                <span class="small">copyright John Moxon 2014. All rights reserved.</span>
+                <span class="small">{{site.copyright}}</span>
             </div>
         </div>
     </section>
