--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -50,7 +50,7 @@
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="/assets/css/all.css">
+    <link rel="stylesheet" href="/assets/css/all.min-2bcf2dc7.css">
     <!-- endinject -->
 
     <!-- Progress meter - Remove if video load times are acceptable -->
@@ -183,7 +183,7 @@
 
     <!-- Custom Theme JavaScript -->
     <!-- inject:js -->
-    <script src="/assets/js/all.min-276b107d.js"></script>
+    <script src="/assets/js/all.min-33960381.js"></script>
     <!-- endinject -->
 
     <!-- Include dataLayer -->
