Moved video to its own theme folder

--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -173,7 +173,7 @@ a:focus {
         position: absolute; right: 0; bottom: 0;
         min-width: 100%; min-height: 100%;
         width: auto; height: auto; z-index: -100;
-        background: url(/assets/img/bgclip.jpg) no-repeat;
+        background: url(/assets/video/road-scene/bgclip.jpg) no-repeat;
         background-size: cover;
     }
 }
