--- a/src/index/sass/base.scss
+++ b/src/index/sass/base.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-$size-1: 6rem;
+$size-1: 6.6rem;
 $navbar-padding-horizontal: 4rem;
 @import '~bulma/sass/utilities/_all';
 
@@ -195,14 +195,14 @@ $column-gap: 2.5rem;
 
       a.navbar-item, a.navbar-link{
         border-right: 1px solid $black;
-        // padding-left: $navbar-padding-horizontal;
-        // padding-right: $navbar-padding-horizontal;
+        padding-left: $navbar-padding-horizontal;
+        padding-right: $navbar-padding-horizontal;
       }
 
       div.sharing-utility{
         border-right: 1px solid $black;
-        // padding-left: $navbar-padding-horizontal - 1rem;
-        // padding-right: $navbar-padding-horizontal - 1rem;
+        padding-left: $navbar-padding-horizontal - 1rem;
+        padding-right: $navbar-padding-horizontal - 1rem;
       }
 
 
@@ -218,15 +218,65 @@ $column-gap: 2.5rem;
     }
   }
 
-
   .navbar-start{
     @include has-standard-navbar {
       flex: 1;
       justify-content: center;
     }
   }
+}
+
+.card{
+  border: 1px solid $black;
+
+  .is-featured{
+    position: absolute;
+    // float: left;
+    z-index: 30;
+    // padding:0.5rem 3rem 0.5rem 0.8rem;
+    // margin:2rem 0 1rem 2rem;
+    top:2rem;
+    left:2rem;
+    line-height: 2rem;
+    // letter-spacing: -1px;
+    // -webkit-box-decoration-break: clone;
+    // box-decoration-break: clone;
+
+    // border:solid $black;
+    // border-width:0 1px 1px 0;
+    text-transform: uppercase;
+    // margin:-1.6rem null null -1px;
+    span{
+      background-color: $white;
+      display: block;
 
 
+    }
+  }
+
+  .padded-multiline {
+  // background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/skyscrapers.jpg);
+  line-height: 1.8;
+  // padding: 120px 50px 50px 50px;
+  // width: 400px;
+  // margin: 20px auto;
+  position: absolute;
+  z-index: 30;
+  padding:4rem 2rem 0.5rem 0.5rem;
+  // left:0.5rem;
+
+  span{
+    background-color: $black;
+    color: $white;
+    display: inline;
+    padding: 0.3rem 2.5rem 0.3rem 0.5rem;
+
+    /* Needs prefixing */
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+
+  }
+}
 
 
 }
