working botstrap template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,4 +3,4 @@ theme :
   name : grayscale
 ---
 {% include JB/setup %}
-{% include themes/grayscale/default.html %}
+{% include themes/jmblog/default.html %}
