--- a/_includes/themes/jmblog/default.html
+++ b/_includes/themes/jmblog/default.html
@@ -136,7 +136,7 @@
     <section id="contact" class="jumbotron contact-form">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Why not say hello?</h2>
+                <h2>Why not say holla?</h2>
                 <p>I'd love to hear from you, so get in touch</p>
 
                 {% include themes/grayscale/contact_form.html %}
