--- a/src/holding-page/sass/base.scss
+++ b/src/holding-page/sass/base.scss
@@ -3,11 +3,6 @@ $size-1: 6.6rem;
 $navbar-padding-horizontal: 4rem;
 @import '~bulma/sass/utilities/_all';
 
-// Fontstacks
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap');
-// family=Libre+Baskerville:ital,wght@0,400;0,700;1,400
-// family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&
-
 
 // $gap: 32px;
 // $tablet:769px;
@@ -48,6 +43,30 @@ $navbar-padding-horizontal: 4rem;
   justify-content: center;
 }
 
+.rounded-image-has-inner-shadow {
+  // box-shadow: inset 0 8px 6px -6px black;
+  position: absolute;
+  width: 128px;
+  height: 128px;
+  box-shadow: inset 0 7px 9px -7px rgba(0,0,0,0.4);
+  // box-shadow: inset 0 -7px 9px -7px rgba(0,0,0,0.4);
+  // box-shadow: inset vertical horizontal blur spread color;
+  border-radius: 100px; // circles shadow to match the image 
+  top: 0;
+}
+
+.has-vcentred-content{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  
+  *{
+    align-self: center;
+  }
+}
+
+
+
 
 // Base branding styles
 
@@ -61,7 +80,6 @@ $body-family: $family-sans-serif;
 $black: #000;
 $darkgreytext: #111;
 $lightgreytext: #ccc;
-// $lightgreentext: #28c3ab;
 $lightgreentext: #28c3ab;
 $lightgreentext_rgba: rgba(40,195,171,.2);
 $errortext: #c32836;
@@ -69,12 +87,27 @@ $green: #28c3ab;
 $grey-dark: #111;
 
 
+// // Custom vars
+$primary: $green;
+$link: $primary;
+//
+// $info: $cyan;
+// $success: $green;
+// $warning: $yellow;
+// $danger: $red;
+// $dark: $grey-darker;
+// $text: $grey-dark;
+
+
+// $icon-dimensions-large: 3rem;
+
+
+
 
 // Bulma configuration
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 
-$link: $lightgreentext;
 // navbar
 // $navbar-padding-horizontal: 4.2rem; // not adhered to?
 // Columns
@@ -89,23 +122,14 @@ $column-gap: 2.5rem;
 
 
 // font-awesome
-.fab, .fas {
-  color: $grey-dark;
-
-}
-
-
+// .fab, .fas {
+//   color: $grey-dark;
+//   size:10rem;
+// }
 
 
-// // Custom vars
-// $primary: $green;
-// $link: $green;
-// $info: $cyan;
-// $success: $green;
-// $warning: $yellow;
-// $danger: $red;
-// $dark: $grey-darker;
-// $text: $grey-dark;
+
+
 
 
 
@@ -121,9 +145,9 @@ $column-gap: 2.5rem;
 
 
 // DEBUG:
-.column {
-  // background-color: $warning;//
-}
+// .column {
+//   background-color: $warning;//
+// }
 
 
 
@@ -177,46 +201,46 @@ $column-gap: 2.5rem;
 
 
 .navbar{
-  @include has-mobile-navbar{
-    position: absolute !important;
-    top:0px;
-    right:0;
-    width:100%;
-  }
+//   @include has-mobile-navbar{
+//     position: absolute !important;
+//     top:0px;
+//     right:0;
+//     width:100%;
+//   }
 
-  .navbar-menu{
-    @include has-standard-navbar {
-      border:solid $black;
-      border-width: 1px 0;
+//   // .navbar-menu{
+//   //   @include has-standard-navbar {
+//   //     border:solid $black;
+//   //     border-width: 1px 0;
 
-      .navbar-item:first-child{
-        border-left: 1px solid $black;
-      }
+//   //     .navbar-item:first-child{
+//   //       border-left: 1px solid $black;
+//   //     }
 
-      a.navbar-item, a.navbar-link{
-        border-right: 1px solid $black;
-        padding-left: $navbar-padding-horizontal;
-        padding-right: $navbar-padding-horizontal;
-      }
+//   //     a.navbar-item, a.navbar-link{
+//   //       border-right: 1px solid $black;
+//   //       padding-left: $navbar-padding-horizontal;
+//   //       padding-right: $navbar-padding-horizontal;
+//   //     }
 
-      div.sharing-utility{
-        border-right: 1px solid $black;
-        padding-left: $navbar-padding-horizontal - 1rem;
-        padding-right: $navbar-padding-horizontal - 1rem;
-      }
+//   //     div.sharing-utility{
+//   //       border-right: 1px solid $black;
+//   //       padding-left: $navbar-padding-horizontal - 1rem;
+//   //       padding-right: $navbar-padding-horizontal - 1rem;
+//   //     }
 
 
-      // .navbar-link:not(.is-arrowless){
-      //   // padding-left: $navbar-padding-horizontal;
-      //   // padding-right: $navbar-padding-horizontal + 0.5rem;
-      // }
-      //
-      .navbar-dropdown .navbar-item{
-        border-right: unset;
-        border-left: unset;
-      }
-    }
-  }
+//   //     // .navbar-link:not(.is-arrowless){
+//   //     //   // padding-left: $navbar-padding-horizontal;
+//   //     //   // padding-right: $navbar-padding-horizontal + 0.5rem;
+//   //     // }
+//   //     //
+//   //     // .navbar-dropdown .navbar-item{
+//   //     //   border-right: unset;
+//   //     //   border-left: unset;
+//   //     // }
+//   //   }
+//   // }
 
   .navbar-start{
     @include has-standard-navbar {
