--- a/src/jekyll/_includes/themes/jmblog/holding.html
+++ b/src/jekyll/_includes/themes/jmblog/holding.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>{{page.title}} - {{site.name}}</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Test</title>
+
+    <!-- Meta tags -->
+    <meta name="description"
+      content="{%unless page.description == null %}{{ page.description }}{%else%}{{ site.feed_description }}{% endunless %}">
+    <meta name="keywords"
+      content="{% unless page.keywords == null %}{{ page.keywords }}{% else %}{{ site.fail_back_keywords }}{% endunless %}">
+
+    <meta name="author" content="https://plus.google.com/+{{site.author.googleplus}}">
+    <meta name="google-site-verification" content="{{site.webmastertools.verification_code}}" />
+    
+    <!-- {% if page.sitemap.noindex != null %} -->
+    <meta name="robots" content="{{ page.sitemap.noindex | join: ', ' }}">
+    <!-- {% endif %} -->
+
+    <link rel="alternate" type="application/rss+xml" title="{{site.author.name}}: {{site.feed_description}} » Feed"
+      href="{{site.production_url}}{{site.xJB.rss_path}}" />
+
+    <!-- Social  -->
+    <!-- Facebook open graph -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="{% unless page.title == null %}{{ page.title }}{% endunless %}" />
+    <meta property="og:url" content="{{ site.production_url }}{{ page.url }}" />
+    <meta property="og:description" content="{% unless page.description == null %}{{ page.description }}{% endunless %}" />
+    <!-- {% unless page.date == null %} -->
+    <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
+    <meta property="article:modified_time" content="{{ page.date | date_to_xmlschema }}" />
+    <!-- {% else %} -->
+    <!-- Last generated date -->
+    <meta property="article:published_time" content="{{ site.time | date_to_xmlschema }}" />
+    <meta property="article:modified_time" content="{{ site.time | date_to_xmlschema }}" />
+    <!-- {% endunless %} -->
+    <meta property="article:author" content="{{ site.production_url }}/about/" />
+    <meta property="og:site_name" content="{{ site.name }}" />
+    <!-- <meta property="og:image" content="http://wordpress.com/i/blank.jpg" /> -->
+    
+    <!-- Twitter card -->
+    <meta name="twitter:site" content="@{{ site.author.twitter }}" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="{{ page.title }}" />
+    <meta name="twitter:description" content="{% unless page.description == null %}{{ page.description }}{% endunless %}" />
+
+
+
  
     <script defer src="https://kit.fontawesome.com/f74caf9b24.js" crossorigin="anonymous"></script>
     <!-- <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script> -->
@@ -48,7 +91,10 @@
             </figure>
           </div>
           <h1 class="title is-size-1 is-size-2-mobile has-text-black is-family-secondary is-spaced">John Moxon.</h1>
-          <h2 class="subtitle is-size-4 is-size-6-mobile">We can not solve our problems with the same level of thinking that created them. - <span class="is-size-6">Albert Einstein</span></h2>
+          <h2 class="subtitle is-size-4 is-size-6-mobile">
+            We can not solve our problems with the same level of thinking that created them. - 
+            <span class="is-size-6">Albert Einstein</span>
+          </h2>
           
           <!-- Buttons -->
           <div class="columns is-centered">
@@ -65,9 +111,10 @@
           <!-- Summary -->
           <div class="columns has-text-centered">
             <div class="column">
-              <p>Hi! You've caught me while I'm still getting ready!! Wow that's a little embarassing!</p>
+              {{ content }}
+              <!-- <p>Hi! You've caught me while I'm still getting ready!! Wow that's a little embarassing!</p>
               <p>I'm currently preparing a new site where I will host some of the articles I've written to date (or will write
-                soon). For now if you've landed here with a question...</p>
+                soon). For now if you've landed here with a question...</p> -->
             </div>
           </div>
           
@@ -101,7 +148,11 @@
     <div class="container has-text-centered">
       <p>
         The source code for this website is licensed by 
-        <a href="http://opensource.org/licenses/mit-license.php">MIT</a> and can be found <a href="https://github.com/johnmoxon/johnmoxon.github.io/">here on github <i class="fab fa-github has-text-black"></i></a>.
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a> and can be found 
+        <a href="https://github.com/johnmoxon/johnmoxon.github.io/">
+          here on github 
+          <i class="fab fa-github has-text-black"></i>
+        </a>.
         <span xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">
           The website content by <strong><span rel="cc:attributionName">John Moxon</span></strong> is licensed under  
           <a href="https://creativecommons.org/licenses/by/4.0">
@@ -121,17 +172,14 @@
         <img class="" width="150px" src="/assets/img/webpack-on-white-bg.svg" alt="Made with Webpack">
         <img class="" width="150px" src="/assets/img/jekyll-logo-black-red-transparent.png" alt="Made with Jekyll">
       </div>
-    </div>
-      
-
-
-
-        
-
-
-      
+    </div> 
   </footer>
 
+  <!-- Include dataLayer -->
+  <!-- {% include dataLayer/dataLayer %} -->
+  
+  <!-- Include analytics -->
+  <!-- {% include JB/analytics %} -->
 
   </body>
 </html>
