--- a/src/jekyll/_includes/themes/jmblog/theme/holding.html
+++ b/src/jekyll/_includes/themes/jmblog/theme/holding.html
@@ -4,7 +4,7 @@
     {% include themes/jmblog/components/head.html %}
   </head>
   <body id="jmoxon">
-
+    {% include themes/jmblog/components/analytics/googletagmanager_body.html %}
   <!-- Header section -->
   <main>
     <section class="hero is-fullheight is-bold">
