removing mixed content

--- a/src/jekyll/_includes/themes/jmblog/theme/holding.html
+++ b/src/jekyll/_includes/themes/jmblog/theme/holding.html
@@ -15,7 +15,7 @@
           <div class="is-horizontal-center is-flex">
             <figure class="image is-128x128">
               <a href="/" >
-              <img class="is-rounded" src="/assets/img/head-shot-square.jpg?nf_resize=fit&w=128&h=128" alt="John Moxon - BA">
+              <img class="is-rounded" src="{{page.peep-image}}?nf_resize={{page.peep_image_nfresize}}&w={{page.peep_image_nfresize_w}}&h={{page.peep_image_nfresize_h}}" alt="John Moxon - BA">
                 <div class="is-rounded rounded-image-has-inner-shadow"></div>
               </a>
               </figure>
