--- a/src/jekyll/_includes/themes/jmblog/theme/error.html
+++ b/src/jekyll/_includes/themes/jmblog/theme/error.html
@@ -24,7 +24,7 @@
           <div class="content">
             {{content}}
           </div>
-          
+          NOT USED
           {% include themes/jmblog/components/social_buttons_large.html %}
 
         </div>
