--- a/src/jekyll/_includes/themes/jmblog/theme/holding.html
+++ b/src/jekyll/_includes/themes/jmblog/theme/holding.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    {% comment %}
+    Base template - this file should allow front end development without compiling jekyll build
+    Todo: in-line critical site elements to allow development of theme outside of jekyll workflow
+    {% endcomment %}
     {% include themes/jmblog/components/head.html %}
   </head>
   <body id="jmoxon">
@@ -15,31 +19,23 @@
           <div class="is-horizontal-center is-flex">
             <figure class="image is-128x128">
               <a href="/" >
-              <img class="is-rounded" src="{{page.peep-image}}?nf_resize={{page.peep_image_nfresize}}&w={{page.peep_image_nfresize_w}}&h={{page.peep_image_nfresize_h}}" alt="John Moxon - BA">
+              <img class="is-rounded" src="{{ page.peep-image | default: '/assets/img/head-shot-square.jpg' }}?nf_resize={{ page.peep_image_nfresize | default: 'fit' }}&w={{page.peep_image_nfresize_w | default: 128 }}&h={{page.peep_image_nfresize_h | default: 128}}" alt="John Moxon - BA">
                 <div class="is-rounded rounded-image-has-inner-shadow"></div>
               </a>
               </figure>
           </div>
           <h1 class="title is-size-1 is-size-2-mobile has-text-black is-family-secondary is-spaced">
-            <a href="/" class="has-text-black">{{page.headline}}</a></h1>
+            <a href="/" class="has-text-black">{{ page.headline }}</a></h1>
+          {% unless page.quote == null %}
           <h2 class="subtitle is-size-4 is-size-6-mobile">
-            {{page.quote}} - 
-            <span class="is-size-6">{{page.quote-attribution}}</span>
+            {{ page.quote }} 
+            {% unless page.quote-attribution == null %}
+            - <span class="is-size-6">{{ page.quote-attribution }}</span>
+            {% endunless %}
           </h2>
-          
-          {% unless page.centred-buttons == false %}
-          {% include themes/jmblog/components/centred_buttons.html %}
           {% endunless %}
 
-          <!-- Summary -->
-          <div class="columns has-text-centered">
-            <div class="column content">
-              {{ content }}
-            </div>
-          </div>
-          
-          {% include themes/jmblog/components/social_buttons_large.html %}
-
+          {{ content }}
 
         </div>
       </div>
@@ -50,9 +46,6 @@
 
   <!-- Include dataLayer -->
   <!-- {% include dataLayer/dataLayer %} -->
-  
-  <!-- Include analytics -->
-  <!-- {% include JB/analytics %} -->
 
   </body>
 </html>
