--- a/src/jekyll/_includes/themes/jmblog/theme/holding.html
+++ b/src/jekyll/_includes/themes/jmblog/theme/holding.html
@@ -19,7 +19,9 @@
           <div class="is-horizontal-center is-flex">
             <figure class="image is-128x128">
               <a href="/" >
-              <img class="is-rounded" src="{{ page.peep-image | default: '/assets/img/head-shot-square.jpg' }}?nf_resize={{ page.peep_image_nfresize | default: 'fit' }}&w={{page.peep_image_nfresize_w | default: 128 }}&h={{page.peep_image_nfresize_h | default: 128}}" alt="John Moxon - BA">
+              <img class="is-rounded" 
+                src="{{ page.peep-image | default: '/assets/img/head-shot-square.jpg' }}?nf_resize={{ page.peep_image_nfresize | default: 'fit' }}&w={{page.peep_image_nfresize_w | default: 128 }}&h={{page.peep_image_nfresize_h | default: 128}}" 
+                alt="John Moxon - BA">
                 <div class="is-rounded rounded-image-has-inner-shadow"></div>
               </a>
               </figure>
