--- a/admin/temp.css
+++ b/admin/temp.css
@@ -37,3 +37,8 @@ h2, button, input, select, textarea {
 .css-yilgkd-WidgetPreviewContainer img {
   width: 100%;
 }
+
+blockquote{ 
+  font-size: 3em;
+  
+}
